# my_fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_PROJECT.md  alembic.ini  docker-compose.yml  fill_db.py  main.py  pyproject.toml  requirements.txt  view_db.py
alembic/: env.py
alembic/versions/: 2e16de38bbba_add_15_users_to_database.py  4d1d35529cb4_populate_all_tables_with_initial_data.py  57e2e0cab439_add_initial_data.py  6db7cf1de472_initial_migration_create_all_tables.py
scripts/: load_data.py
src/: app.py  test_db.sqlite3
src/api/: __init__.py  auth.py  categories.py  comments.py  depends.py  exceptions.py  locations.py  posts.py  users.py
src/core/: __init__.py  config.py  logging.py
src/core/exceptions/: __init__.py  auth_exceptions.py  database_exceptions.py  domain_exceptions.py
src/domain/auth/use_cases/: __init__.py  authenticate_user.py  create_access_token.py
src/domain/category/use_cases/: __init__.py  category_commands.py  create_category.py  delete_category.py  get_category.py  list_categories.py  update_category.py
src/domain/comment/use_cases/: __init__.py  comment_commands.py  create_comment.py  delete_comment.py  get_comment.py  list_comments.py  update_comment.py
src/domain/location/use_cases/: __init__.py  create_location.py  delete_location.py  get_location.py  list_locations.py  (+2 more)
src/infrastructure/sqlite/: database.py  metadata.py
src/resources/: auth.py
src/schemas/: __init__.py  auth.py  base.py  categories.py  comments.py  locations.py  posts.py  users.py
src/services/: auth.py
(+26 files in other folders)
