[project]
name = "my-fastapi"
version = "0.1.0"
description = "FastAPI блог-платформа"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "martines" }
]

dependencies = [
    "fastapi[standard]>=0.129.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
    "sqlalchemy>=2.0.48",
]
